
- Made RAM disk creation code more robust by scanning the output from hdiutil for the correct mount point (rather than assumimg /Volumes/ramdisk)
- Synchronized SSH version and installation with version installed by Installer.app.  This makes it compatible with Boss Prefs.app and Services.app
- Added new dialog for SSH removal which allows people to choose which shared files to remove
- Added a 3rd reboot to SSH installation so that chmod isn't being run perpetually (chewing up some battery life).  Yes, I should have done this a long time ago. :)
- Fixed a bug with wallpaper uploading where thumbnail file would be the same as the main file no matter what
- Disabled addition of wallpaper to user folder in Customize tab since it doesn't work
- Added failure checking for SIM unlock
- Added my own tool (optivate) for patching all versions of lockdownd from the RAM disk


v1.4 beta 3 - 02/22/08

- iTunes 7.6.1 support
- Cleaned up the RAM disk creation code a lot


v1.4 beta 2 - 02/13/08

- Identical to beta 1, except it's compiled to work on Mac OS X 10.4 (in addition to 10.5)


v1.4 beta - 02/13/08

- Changed copyright dates for 2008
- Cleaned up libPhoneInteraction a bit so that internally used functions are hidden from application developers.  Also refactored MobileDevice private function code out into a separate class.
- Changed title of SSH libarmfp.dylib alert dialog from "Failure" to "Alert" to make things clearer
- Added better handling for cases where some phone information can't be obtained (doesn't fail outright)
- Added 1.1.3 jailbreak (thanks to Zibri for the method)
- Removed old anySIM-based SIM unlock and put in new gunlock method (thanks to Geohot for this)
- Added documentation for usage with firmware 1.1.3
- Updated the other documentation accordingly


v1.3.2 beta - 01/16/08

- Added iTunes 7.6 compatibility


v1.3.1 (Hacker-Pschorr) - 12/15/07

- Added instructions for upgrading from 1.1.1 to 1.1.2